# replit-oauth

./: .replit  README.md  pyproject.toml
app/: __init__.py
app/routes/: authorize.py  bio.py  delete.py  edit.py  id.py  index.py  isverified.py  langs.py  login.py  marknotifications.py  name.py  notifications.py  recentrepls.py  replboost.py  repldelete.py  replpublish.py  repls.py  replunboost.py  replunpublish.py  replupdate.py  revoke.py  timecreated.py  token.py  username.py
app/static/: style.css
app/templates/: authorize.html  index.html  login.html
