[tool.poetry]
name = "repl_python3_api"
version = "0.1.0"
description = ""
authors = ["frissyn"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
Flask-Session = "^0.4.0"
s1db = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
